@@ -1,3 +1,5 @@
+* IMPROVEMENT: Deprecated functions KSI_TLV_setUintValue, KSI_TLV_fromUint and KSI_TLV_removeNestedTlv.
+
 Version 3.9
 
 2016-06-21 release(3.9.1696)
